Fixed white space

--- a/web/static/css/modules/_boards.sass
+++ b/web/static/css/modules/_boards.sass
@@ -222,6 +222,7 @@
         cursor: pointer
         animation-duration: .3s
         animation-name: fadeIn
+        white-space: normal
 
         &:hover
           background: rgba($gray, .4)
